Fixed serious style problem on firefox browser shadow dom doesn't work on firefox...

--- a/src/content/display/style/common.styl
+++ b/src/content/display/style/common.styl
@@ -5,7 +5,7 @@ light-primary = rgba(74,140,247,0.7);
 /**
  * start icon style
  */
-.icon {
+.edge-translate-icon {
     font-style: normal;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;    
@@ -17,11 +17,8 @@ light-primary = rgba(74,140,247,0.7);
         width: icon-size;
         height: icon-size;
         vertical-align: bottom;
+		display: block;   
     }
-}
-
-.icon-fix {    
-    display: none;
 }
 
 /**
